[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/Credits/CreditsMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/Title-Menus.png" type="Texture" id=2]
[ext_resource path="res://Menus/Buttons-Icons.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 300, 400, 150 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 100, 100, 100 )

[node name="CreditsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TitleCredits" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 150.0
texture = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -127.0
margin_right = 200.0
margin_bottom = 127.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 400.0
margin_bottom = 71.0
rect_min_size = Vector2( 100, 50 )
custom_constants/shadow_as_outline = 3
text = "Designed and developed by"
align = 1
valign = 1

[node name="GamelexLogo" type="TextureRect" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 400.0
margin_bottom = 75.0

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 400.0
margin_bottom = 129.0
rect_min_size = Vector2( 100, 50 )
custom_constants/shadow_as_outline = 3
text = "Music by "
align = 1
valign = 1

[node name="TwitterButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 133.0
margin_right = 400.0
margin_bottom = 233.0
rect_min_size = Vector2( 100, 100 )
texture_normal = SubResource( 2 )
texture_hover = SubResource( 3 )
expand = true
stretch_mode = 5

[connection signal="visibility_changed" from="." to="." method="_on_CreditsMenu_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/TwitterButton" to="." method="_on_TwitterButton_pressed"]
